# hilti_slam_challenge_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: ExposureInfo.msg  GroundControlPoint.msg
